# cv-agent

./: README.md  config.yaml  cv_agent_documentation.md  docker-compose.yml  main.py  pyproject.toml
agents/: cv_agent.py  fact_checker.py  llm_factory.py  orchestrator.py  profile_agent.py  profile_builder.py  profile_coordinator.py  state.py
data/: profile.json
data/linkedin/: Invitations.csv  Profile.csv  Recommendations_Given.csv  Recommendations_Received.csv  Registration.csv
memory/: profile_store.py  vector_store.py
prompts/: cv_prompts.py  profile_prompts.py
tests/: conftest.py  test_cv_agent.py  test_linkedin_parser.py  test_profile_coordinator.py  test_vector_store.py
tools/: cv_parser.py  deduplicator.py  github_scraper.py  linkedin_parser.py
