[project]
name = "cv-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.13",
    "langgraph>=1.1.6",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "pydantic>=2.13.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.1",
    "rich>=15.0.0",
]
